Added capacity slots to services
